Fixed layout issues with using total height of modal content

--- a/wp-doc-admin.css
+++ b/wp-doc-admin.css
@@ -46,7 +46,7 @@
 
 
 /* BREADCRUMBS */
-.wp-doc-admin-right-column .breadcrumbs {padding-bottom: 10px;}
+.wp-doc-admin-right-column .breadcrumbs {padding: 10px 0px;}
 .wp-doc-admin-right-column .breadcrumbs a {text-decoration: none;}
 
  /* The Modal (background) */
@@ -75,33 +75,26 @@
 
 /* Modal Footer */
 .wp-doc-admin-footer {
-  height: 20px;
-  padding: 2px 16px;
-  background-color: grey;
+  padding: 2px 0px;
+  background-color: #f1f1f1;
   color: black;
-/*  position: absolute;
-  bottom:0;
-  left:0;
-  width:100%;
-  padding:5px;
-  display: block;*/
 }
 .wp-doc-admin-footer span {
   float:right;
 }
 
 /* Modal Content */
-.modal-content {
+/*.modal-content {
   position: relative;
   background-color: #f1f1f1;
-  margin: 15% auto; /* 15% from the top and centered */
+  margin: 15% auto;
   padding: 0;
   border: 1px solid #888;
   width: 80%;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
   animation-name: animatetop;
   animation-duration: 0.4s
-}
+}*/
 
 /* Add Animation */
 @keyframes animatetop {
@@ -128,10 +121,66 @@
 }
 
 .wp-doc-admin-wrapper {
-  display: grid;
-  grid-template-columns: 1fr 3fr;
+/*  display: grid;
+  grid-template-columns: 1fr 3fr;*/
   /*height:calc(100%-20px);*/
 }
 .wp-doc-admin-hidden {
   display: none;
 }
+
+
+.wp-doc-admin-left {
+		grid-area: sidebar;
+    overflow-y: auto;
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	.wp-doc-admin-right-column {
+		grid-area: content;
+		position: relative;
+    overflow-y: auto;
+	}
+
+/*	.header {
+		grid-area: header;
+	}*/
+
+	.wp-doc-admin-footer {
+		grid-area: footer;
+    /*height: 26px;*/
+	}
+
+
+	.wp-doc-admin-wrapper {
+		display: grid;
+    /*grid-gap: 10px;*/
+		grid-template-columns: 1fr 3fr;
+		grid-template-areas:
+		"sidebar content"
+		"footer  footer";
+		background-color: #fff;
+		color: #444;
+    height: 100%;
+    width: 100%;
+    grid-template-rows: auto 26px;
+    /*grid-auto-rows: auto;*/
+	}
